--- a/template/core-dist/src/app/authentication/registration/registration.component.scss
+++ b/template/core-dist/src/app/authentication/registration/registration.component.scss
@@ -3,7 +3,8 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: radial-gradient(#969696, #111118) rgba(34, 34, 40, 0.94);
+    background: url('/assets/images/mountainBg.png');
+    background-size: 100% 100%;
     opacity: 0.9;
   }
 
@@ -15,11 +16,9 @@
     transform: translateY(-50%);
     box-sizing: border-box;
     padding: 20px 20px 60px 20px;
-    width: 60%;
-    height: 56%;
-    min-width: 800px;
-    min-height: 500px;
-    border-radius: 1%;
+    width: 450px;
+    height: 550px;
+    border-radius: 5px;
     background-color: white;
 
     &__welcome {
@@ -35,19 +34,7 @@
       }
     }
 
-    @media only screen and (max-width : 1200px) {
-      width: 70%;
-      height: 64%;
-    }
-
-    @media only screen and (max-width : 900px) {
-      width: 70%;
-      height: 64%;
-      min-width: 0;
-      min-height: 0;
-    }
-
-    @media only screen and (max-width : 600px) {
+    @media only screen and (max-width : 500px) {
       width: 100%;
       height: 100%;
       border-radius: 0;
@@ -56,12 +43,11 @@
 }
 
 md-tab-group {
-  float: right;
-  width: 60%;
-  height: 100%;
+  height: 370px;
+  margin-top: 90px;
 
-  @media only screen and (max-width : 900px) {
-    width: 100%;
+  @media only screen and (max-width : 460px) {
+    margin-top: 70px;
   }
 }
 
@@ -120,7 +106,7 @@ md-tab-group {
     }
 
     &__label {
-      padding-left: 25px;
+      padding-left: 13px;
       color: #9b9b9b;
       font-size: 16px;
     }
@@ -128,7 +114,7 @@ md-tab-group {
     &__dropdown {
       position: relative;
       display: inline-block;
-      border-bottom: 1px #9E9E9E solid;
+      border-bottom: 1px #E4E4E4 solid;
       padding-bottom: 4px;
       width: 100%;
       font-size: 14px;
@@ -151,14 +137,38 @@ md-tab-group {
 
   &__image {
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 0;
-    border-bottom-left-radius: 5px;
-    height: 100%;
-    max-width: 45%;
+    background: url("/assets/images/blueheader.svg") no-repeat;
+    background-size: 450px 95px;
+    width: 450px;
+    height: 95px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 
-    @media only screen and (max-width : 900px) {
-      display: none;
+    @media only screen and (max-width : 500px) {
+      width: 100%;
+      height: 100%;
+      background-size: 100%;
+      border-radius: 0;
+      z-index: -1;
+    }
+
+    &--six {
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      width: 170px;
+
+      @media only screen and (max-width : 500px) {
+        width: 150px;
+      }
+
+      @media only screen and (max-width : 360px) {
+        top: 10px;
+        left: 10px;
+        width: 130px;
+      }
     }
   }
 
@@ -185,77 +195,67 @@ md-tab-group {
   }
 }
 
-.screen__content {
-  float: right;
-  width: 60%;
-  height: 100%;
-
-  @media only screen and (max-width : 900px) {
-    width: 100%;
-  }
-
-  &__terms {
-    &__title {
-      float: right;
-      margin: 30px 0 25px 0;
-      width: 100%;
-      border-bottom: solid 3px #0899CD;
-      padding-bottom: 5px;
-      font-size: 20px;
-      color: #333333;
-
-      span {
-        padding-left: 20px;
-      }
-    }
-
-    &__text {
-      border: solid 1px #858585;
-      padding: 20px 10px;
-      height: 50%;
-      overflow-y: auto;
-      color: #858585;
-    }
-
-    &__label {
-      font-size: 16px;
-      color: #9b9b9b;
-    }
-
-    &__input--single {
-      margin-left: 0;
-      width: 80%;
-    }
-  }
-}
-
-.dropdown__container {
-  font-size: 0;
-}
-
-.dropdown__element {
-  display: inline-block;
-  margin: 16px 0;
-  box-sizing: border-box;
-  padding: 0 5px 0 25px;
-  width: 50%;
-
-  @media only screen and (max-width : 900px) {
-    padding: 0 10px;
-  }
-
-  @media only screen and (max-width : 600px) {
-    padding: 0 5px;
-  }
-}
-
 .terms {
-  width: 55%;
+  margin-top: 50px;
+  height: 420px;
+  padding: 0 15px;
 
-  @media only screen and (max-width : 900px) {
-    width: 100%;
-    text-align: center;
+  @media only screen and (max-width : 460px) {
+    margin-top: 40px;
+    height: 100%;
   }
+
+  &__title {
+    float: right;
+    margin: 30px 0 25px 0;
+    width: 100%;
+    border-bottom: solid 3px #0899CD;
+    padding-bottom: 5px;
+    font-size: 20px;
+    color: #333333;
+
+    span {
+      padding-left: 20px;
+    }
+  }
+
+  &__text {
+    border: solid 1px #858585;
+    padding: 20px 10px;
+    height: 50%;
+    overflow-y: auto;
+    color: #858585;
+  }
+
+  &__label {
+    font-size: 16px;
+    color: #9b9b9b;
+  }
+
+  &__input--single {
+    margin-left: 0;
+    width: 80%;
+  }
+}
+
+.dropdown {
+  &__container {
+    font-size: 0;
+    margin: 13px 0;
+  }
+
+  &__element {
+    display: inline-block;
+    box-sizing: border-box;
+    padding-left: 13px;
+    width: 50%;
+  }
+}
+
+.thank-you {
+  height: 100%;
+  padding: 0 15px;
+  text-align: center;
 
   &__title {
     margin-bottom: 0;
@@ -267,6 +267,10 @@ md-tab-group {
     @media only screen and (max-width : 600px) {
       font-size: 30px;
     }
+
+    @media only screen and (max-width : 320px) {
+      font-size: 26px;
+    }
   }
 
   &__subtitle {
@@ -275,18 +279,17 @@ md-tab-group {
     font-weight: 300;
     font-size: 36px;
 
-    @media only screen and (max-width : 600px) {
-      font-size: 30px;
+    @media only screen and (max-width : 320px) {
+      font-size: 26px;
     }
   }
 
   &__content {
-    width: 80%;
     font-size: 18px;
     color: #9b9b9b;
 
-    @media only screen and (max-width : 900px) {
-      margin: auto
+    @media only screen and (max-width : 320px) {
+      font-size: 16px;
     }
   }
 
@@ -297,10 +300,6 @@ md-tab-group {
     &__label {
       font-size: 18px;
       color: #9b9b9b;
-
-      @media only screen and (max-width : 600px) {
-        font-size: 16px;
-      }
     }
 
     button {
@@ -317,25 +316,13 @@ md-tab-group {
       font-size: 18px;
       color: #9b9b9b;
       cursor: pointer;
-
-      @media only screen and (max-width : 600px) {
-        font-size: 16px;
-      }
     }
   }
 }
 
 table {
   td {
-    padding: 2px 15px 10px 15px;
-
-    @media only screen and (max-width : 900px) {
-      padding: 5px 10px 10px 10px;
-    }
-
-    @media only screen and (max-width : 600px) {
-      padding: 2px 5px 5px 5px;
-    }
+    padding: 8px;
 
     .full {
       width: 100%;
@@ -348,14 +335,9 @@ table {
 }
 
 md-input {
-  margin: 0 10px 0 10px;
   width: 100%;
   font-size: 14px;
   color: #9b9b9b;
-
-  @media only screen and (max-width : 900px) {
-    margin: 0;
-  }
 }
 
 md-card-subtitle {
