--- a/template/core-dist/src/app/navigation/topnav/topnav.component.html
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.html
@@ -1,8 +1,6 @@
 <md-progress-bar mode="indeterminate" *ngIf="_isLoadingRoute"></md-progress-bar>
 <md-toolbar>
-  <button md-icon-button (click)="toggleSidenav()" id="menu-toggler">
-    <md-icon>menu</md-icon>
-  </button>
+  <img src="/assets/images/logo-white.svg" class="topnav__logo">
   <md-toolbar-row *ngIf="_navigation.mediumScreenAndDown && _breadcrumbs.length > 0 && !_autoBreadcrumbs">
     <span class="breadcrumb-holder">
       <span *ngFor="let breadcrumb of _breadcrumbs" class="breadcrumb">
