--- a/template/core-dist/src/app/navigation/topnav/topnav.component.scss
+++ b/template/core-dist/src/app/navigation/topnav/topnav.component.scss
@@ -8,6 +8,14 @@ $main-color: #9B9A9B;
 }
 
 .topnav {
+  height: 64px;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  background: url("/assets/images/top-nav.svg");
+
+  &__logo {
+    height: 45px;
+  }
+
   &__search {
 
     &__input {
