--- a/template/core-dist/src/app/pages/users-page/users.component.html
+++ b/template/core-dist/src/app/pages/users-page/users.component.html
@@ -1,6 +1,7 @@
 <user *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></user>
+<div class="entity-index__title">Users</div>
 
-<button md-raised-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()">Add New</button>
+<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
 <md-card class="entity-index__card">
   <md-card-content class="entity-index__card__content">
