--- a/template/core-dist/src/assets/scss/_entity-index.scss
+++ b/template/core-dist/src/assets/scss/_entity-index.scss
@@ -1,9 +1,24 @@
+$title-color: #979797;
+
 .entity-index {
 
+  &__title {
+    padding: 25px 70px;
+    font-size: 22px;
+    color: $title-color;
+  }
+
   &__add {
-    margin: 30px 0 30px 50px !important;
+    position: absolute !important;
+    top: 60px;
+    left: 10px;
     background: #498FE1;
     font-size: 18px !important;
+    z-index: 1;
+
+    md-icon {
+      color: white;
+    }
   }
 
   &__card {
