--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -56,7 +56,7 @@
 .entity {
   position:absolute;
   right: 0;
-  margin-top: 65px;
+  margin-top: 64px;
   height: 100%;
   width: 99%;
   border-left: solid 1px gray;
@@ -68,7 +68,7 @@
 
   &--wrapper {
     position: absolute;
-    top: 0;
+    top: -63px;
     right: 0;
     height: 100%;
     width: 30%;
