--- a/template/core-dist/src/app/pages/campaigns-page/campaign/campaign.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaign/campaign.component.html
@@ -1,30 +1,28 @@
-<div class="entity--wrapper">
-  <div class="entity">
-    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+<div class="entity" [class.entity--full-screen]="fullScreen">
+  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-    <div *ngIf="entity">
-      <div class="entity__caption">
-        {{entity.name}}
-      </div>
+  <div *ngIf="entity">
+    <div class="entity__caption">
+      {{entity.name}}
+    </div>
 
-      <div class="entity__content">
-        <md-tab-group>
-          <md-tab label="Details">
+    <div class="entity__content">
+      <md-tab-group>
+        <md-tab label="Details">
 
-            <entity-view-info
-              [title]="'GENERAL DETAILS'"
-              [data]="[
-                {name:'ID', value: entity.id},
-                {name:'Name', value: entity.name}
-              ]">
-            </entity-view-info>
+          <entity-view-info
+            [title]="'GENERAL DETAILS'"
+            [data]="[
+              {name:'ID', value: entity.id},
+              {name:'Name', value: entity.name}
+            ]">
+          </entity-view-info>
 
-          </md-tab>
-          <md-tab label="Edit">
+        </md-tab>
+        <md-tab label="Edit">
 
-          </md-tab>
-        </md-tab-group>
-      </div>
+        </md-tab>
+      </md-tab-group>
     </div>
   </div>
 </div>
