--- a/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
+++ b/template/core-dist/src/app/pages/campaigns-page/campaigns.component.html
@@ -1,48 +1,49 @@
-<campaign *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></campaign>
+<div #indexR class="entity-index">
+  <campaign *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></campaign>
 
-<div class="entity-index__title">Campaigns</div>
+  <div class="entity-index__title">Campaigns</div>
 
-<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
 
-    <table class="entity-index__table highlight">
-      <thead class="entity-index__table__header">
-        <tr>
-          <th data-field="id">Name <md-icon>keyboard_arrow_down</md-icon></th>
-          <th data-field="numOfMerchProviders">Number of Merchant Providers <md-icon>keyboard_arrow_down</md-icon></th>
-          <th data-field="numOfProdSchedules">Number of Product Schedules <md-icon>keyboard_arrow_down</md-icon></th>
-          <th>Actions</th>
-        </tr>
-      </thead>
+      <table class="entity-index__table highlight">
+        <thead class="entity-index__table__header">
+          <tr>
+            <th data-field="id">Name <md-icon>keyboard_arrow_down</md-icon></th>
+            <th data-field="numOfMerchProviders">Number of Merchant Providers <md-icon>keyboard_arrow_down</md-icon></th>
+            <th data-field="numOfProdSchedules">Number of Product Schedules <md-icon>keyboard_arrow_down</md-icon></th>
+            <th>Actions</th>
+          </tr>
+        </thead>
 
-      <tbody>
-        <tr *ngFor="let entity of entities">
-          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.loadBalancer.merchantProviderConfigurations.length}}</td>
-          <td (click)="viewEntity(entity.id)">{{entity.productSchedules.length}}</td>
-          <td>
-            <table-actions
-              [service]="service"
-              (viewClicked)="viewEntity(entity.id)"
-              (copyClicked)="copyEntity(entity.id)"
-              (exportClicked)="exportEntity(entity.id)">
-            </table-actions>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+        <tbody>
+          <tr *ngFor="let entity of entities">
+            <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+            <td (click)="viewEntity(entity.id)">{{entity.loadBalancer.merchantProviderConfigurations.length}}</td>
+            <td (click)="viewEntity(entity.id)">{{entity.productSchedules.length}}</td>
+            <td>
+              <table-actions
+                [service]="service"
+                (viewClicked)="viewEntity(entity.id)"
+                (copyClicked)="copyEntity(entity.id)"
+                (exportClicked)="exportEntity(entity.id)">
+              </table-actions>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-    <table-pagination
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)">
-    </table-pagination>
-  </md-card-content>
-</md-card>
-
+      <table-pagination
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </table-pagination>
+    </md-card-content>
+  </md-card>
+</div>
