--- a/template/core-dist/src/assets/scss/_navigation.scss
+++ b/template/core-dist/src/assets/scss/_navigation.scss
@@ -36,37 +36,25 @@ md-sidenav {
   md-toolbar {
     box-shadow: 0 1px 0 rgba(0, 0, 0, .12);
     padding: 0 10px;
-    background: #385F8D;
+    background: url("/assets/images/leftrailtop.png") no-repeat;
+    background-size: 100% 100%;
+
+    .logo {
+      width: 120px;
+    }
+
+    .logo-small {
+      width: 44px;
+    }
   }
 }
 
 md-sidenav-layout > .md-sidenav-content {
   height: 100vh;
-  overflow: visible;
 }
 
 md-sidenav-layout {
   background-color: rgb(250, 250, 250);
-}
-
-.side-navigation {
-  &__toggle {
-
-    &__container {
-      text-align: right;
-
-      &--center {
-        text-align: center;
-      }
-    }
-
-    &__button {
-
-      .rotated {
-        transform: rotate(180deg);
-      }
-    }
-  }
 }
 
 md-nav-list.side-navigation {
