--- a/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
+++ b/template/core-dist/src/app/pages/affiliates-page/affiliates.component.html
@@ -1,56 +1,57 @@
-<affiliate *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></affiliate>
+<div #indexR class="entity-index">
+  <affiliate *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></affiliate>
 
-<div class="entity-index__title">Affiliates</div>
+  <div class="entity-index__title">Affiliates</div>
 
-<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
 
-    <table class="entity-index__table highlight">
-      <thead class="entity-index__table__header">
-      <tr>
-        <th data-field="affiliateId">Affiliate ID <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="subId1">Sub ID 1 <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="subId2">Sub ID 2 <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="subId3">Sub ID 3 <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="subId4">Sub ID 4 <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="subId5">Sub ID 5 <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="clickId">Click ID <md-icon>keyboard_arrow_down</md-icon></th>
-        <th>Actions</th>
-      </tr>
-      </thead>
+      <table class="entity-index__table highlight">
+        <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="affiliateId">Affiliate ID <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="subId1">Sub ID 1 <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="subId2">Sub ID 2 <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="subId3">Sub ID 3 <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="subId4">Sub ID 4 <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="subId5">Sub ID 5 <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="clickId">Click ID <md-icon>keyboard_arrow_down</md-icon></th>
+          <th>Actions</th>
+        </tr>
+        </thead>
 
-      <tbody>
-      <tr *ngFor="let entity of entities">
-        <td (click)="viewEntity(entity.id)">{{entity.affiliateId}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.subId1}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.subId2}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.subId3}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.subId4}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.subId5}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.clickId}}</td>
-        <td>
-          <table-actions
-            [service]="service"
-            (viewClicked)="viewEntity(entity.id)"
-            (copyClicked)="copyEntity(entity.id)"
-            (exportClicked)="exportEntity(entity.id)">
-          </table-actions>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+        <tbody>
+        <tr *ngFor="let entity of entities">
+          <td (click)="viewEntity(entity.id)">{{entity.affiliateId}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.subId1}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.subId2}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.subId3}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.subId4}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.subId5}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.clickId}}</td>
+          <td>
+            <table-actions
+              [service]="service"
+              (viewClicked)="viewEntity(entity.id)"
+              (copyClicked)="copyEntity(entity.id)"
+              (exportClicked)="exportEntity(entity.id)">
+            </table-actions>
+          </td>
+        </tr>
+        </tbody>
+      </table>
 
-    <table-pagination
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)">
-    </table-pagination>
-  </md-card-content>
-</md-card>
-
+      <table-pagination
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </table-pagination>
+    </md-card-content>
+  </md-card>
+</div>
