--- a/template/core-dist/src/app/pages/emails-page/email/email.component.html
+++ b/template/core-dist/src/app/pages/emails-page/email/email.component.html
@@ -1,46 +1,45 @@
-<div class="entity--wrapper">
-  <div class="entity">
-    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+<div class="entity" [class.entity--full-screen]="fullScreen">
 
-    <div *ngIf="entity">
-      <div class="entity__caption">
-        {{entity.name}}
-      </div>
+  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-      <div class="entity__content">
-        <md-tab-group>
-          <md-tab label="Details">
+  <div *ngIf="entity">
+    <div class="entity__caption">
+      {{entity.name}}
+    </div>
+
+    <div class="entity__content">
+      <md-tab-group>
+        <md-tab label="Details">
+
+          <entity-view-info
+            [title]="'GENERAL DETAILS'"
+            [data]="[
+              {name:'ID', value: entity.id},
+              {name:'Name', value: entity.name},
+              {name:'Subject', value: entity.username},
+              {name:'Body', value: entity.password},
+              {name:'Type', value: entity.endpoint}
+            ]">
+            </entity-view-info>
 
             <entity-view-info
-              [title]="'GENERAL DETAILS'"
+              [title]="'SMTP PROVIDER DETAILS'"
               [data]="[
-                {name:'ID', value: entity.id},
-                {name:'Name', value: entity.name},
-                {name:'Subject', value: entity.username},
-                {name:'Body', value: entity.password},
-                {name:'Type', value: entity.endpoint}
+                {name:'ID', value: entity.smtpProvider.id},
+                {name:'Name', value: entity.smtpProvider.name},
+                {name:'Host Name', value: entity.smtpProvider.hostname},
+                {name:'IP Address', value: entity.smtpProvider.ipAddress},
+                {name:'username', value: entity.smtpProvider.username},
+                {name:'password', value: entity.smtpProvider.password},
+                {name:'port', value: entity.smtpProvider.port}
               ]">
-              </entity-view-info>
+            </entity-view-info>
 
-              <entity-view-info
-                [title]="'SMTP PROVIDER DETAILS'"
-                [data]="[
-                  {name:'ID', value: entity.smtpProvider.id},
-                  {name:'Name', value: entity.smtpProvider.name},
-                  {name:'Host Name', value: entity.smtpProvider.hostname},
-                  {name:'IP Address', value: entity.smtpProvider.ipAddress},
-                  {name:'username', value: entity.smtpProvider.username},
-                  {name:'password', value: entity.smtpProvider.password},
-                  {name:'port', value: entity.smtpProvider.port}
-                ]">
-              </entity-view-info>
+        </md-tab>
+        <md-tab label="Edit">
 
-          </md-tab>
-          <md-tab label="Edit">
-
-          </md-tab>
-        </md-tab-group>
-      </div>
+        </md-tab>
+      </md-tab-group>
     </div>
   </div>
 </div>
