--- a/template/core-dist/src/app/pages/emails-page/emails.component.html
+++ b/template/core-dist/src/app/pages/emails-page/emails.component.html
@@ -1,48 +1,50 @@
-<email *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></email>
+<div #indexR class="entity-index">
+  <email *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></email>
 
-<div class="entity-index__title">Emails</div>
+  <div class="entity-index__title">Emails</div>
 
-<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
-    <table class="entity-index__table highlight">
-      <thead class="entity-index__table__header">
-        <tr>
-          <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="subject">Subject <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="type">Type <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="smtpProviderName">SMTP Provider Name <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th>Actions</th>
-        </tr>
-      </thead>
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
+      <table class="entity-index__table highlight">
+        <thead class="entity-index__table__header">
+          <tr>
+            <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="subject">Subject <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="type">Type <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="smtpProviderName">SMTP Provider Name <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th>Actions</th>
+          </tr>
+        </thead>
 
-      <tbody>
-        <tr *ngFor="let email of entities">
-          <td (click)="viewEntity(entity.id)">{{email.name}}</td>
-          <td (click)="viewEntity(entity.id)">{{email.subject}}</td>
-          <td (click)="viewEntity(entity.id)">{{email.type}}</td>
-          <td (click)="viewEntity(entity.id)">{{email.smtpProvider.name}}</td>
-          <td>
-            <table-actions
-              [service]="service"
-              (viewClicked)="viewEntity(entity.id)"
-              (copyClicked)="copyEntity(entity.id)"
-              (exportClicked)="exportEntity(entity.id)">
-            </table-actions>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+        <tbody>
+          <tr *ngFor="let email of entities">
+            <td (click)="viewEntity(entity.id)">{{email.name}}</td>
+            <td (click)="viewEntity(entity.id)">{{email.subject}}</td>
+            <td (click)="viewEntity(entity.id)">{{email.type}}</td>
+            <td (click)="viewEntity(entity.id)">{{email.smtpProvider.name}}</td>
+            <td>
+              <table-actions
+                [service]="service"
+                (viewClicked)="viewEntity(entity.id)"
+                (copyClicked)="copyEntity(entity.id)"
+                (exportClicked)="exportEntity(entity.id)">
+              </table-actions>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-    <table-pagination
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)">
-    </table-pagination>
-  </md-card-content>
-</md-card>
+      <table-pagination
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </table-pagination>
+    </md-card-content>
+  </md-card>
+</div>
