--- a/template/core-dist/src/app/pages/products-page/product/product.component.html
+++ b/template/core-dist/src/app/pages/products-page/product/product.component.html
@@ -1,44 +1,43 @@
-<div class="entity--wrapper">
-  <div class="entity">
-    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+<div class="entity" [class.entity--full-screen]="fullScreen">
 
-    <div *ngIf="entity">
-      <div class="entity__caption">
-        {{entity.name}}
-      </div>
+  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-      <div class="entity__content">
-        <md-tab-group>
-          <md-tab label="Details">
+  <div *ngIf="entity">
+    <div class="entity__caption">
+      {{entity.name}}
+    </div>
 
-            <entity-view-info
-              [title]="'GENERAL DETAILS'"
-              [data]="[
-                {name:'ID', value: entity.id},
-                {name:'Name', value: entity.name},
-                {name:'SKU', value: entity.sku},
-                {name:'Ship', value: entity.ship},
-                {name:'Shipping Delay', value: entity.shippingDelay}
-              ]">
-            </entity-view-info>
+    <div class="entity__content">
+      <md-tab-group>
+        <md-tab label="Details">
 
-            <entity-view-info
-              [title]="'Fulfillment Provider'"
-              [data]="[
-                {name:'ID', value: entity.fulfillmentProvider.id},
-                {name:'Name', value: entity.fulfillmentProvider.name},
-                {name:'Username', value: entity.fulfillmentProvider.username},
-                {name:'Endpoint', value: entity.fulfillmentProvider.endpoint},
-                {name:'Password', value: entity.fulfillmentProvider.password},
-                {name:'Provider', value: entity.fulfillmentProvider.provider}
-              ]">
-            </entity-view-info>
-          </md-tab>
-          <md-tab label="Edit">
+          <entity-view-info
+            [title]="'GENERAL DETAILS'"
+            [data]="[
+              {name:'ID', value: entity.id},
+              {name:'Name', value: entity.name},
+              {name:'SKU', value: entity.sku},
+              {name:'Ship', value: entity.ship},
+              {name:'Shipping Delay', value: entity.shippingDelay}
+            ]">
+          </entity-view-info>
 
-          </md-tab>
-        </md-tab-group>
-      </div>
+          <entity-view-info
+            [title]="'Fulfillment Provider'"
+            [data]="[
+              {name:'ID', value: entity.fulfillmentProvider.id},
+              {name:'Name', value: entity.fulfillmentProvider.name},
+              {name:'Username', value: entity.fulfillmentProvider.username},
+              {name:'Endpoint', value: entity.fulfillmentProvider.endpoint},
+              {name:'Password', value: entity.fulfillmentProvider.password},
+              {name:'Provider', value: entity.fulfillmentProvider.provider}
+            ]">
+          </entity-view-info>
+        </md-tab>
+        <md-tab label="Edit">
+
+        </md-tab>
+      </md-tab-group>
     </div>
   </div>
 </div>
