--- a/template/core-dist/src/app/pages/products-page/products.component.html
+++ b/template/core-dist/src/app/pages/products-page/products.component.html
@@ -1,49 +1,51 @@
-<product *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></product>
+<div #indexR class="entity-index">
+  <product *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()" [fullScreen]="fullScreen"></product>
 
-<div class="entity-index__title">Products</div>
+  <div class="entity-index__title">Products</div>
 
-<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
 
-    <table class="entity-index__table highlight">
-      <thead class="entity-index__table__header">
-      <tr>
-        <th data-field="Name">Product Name <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="Sku">SKU <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="Ship">Ship <md-icon>keyboard_arrow_down</md-icon></th>
-        <th data-field="Shipping Delay">Shipping Delay <md-icon>keyboard_arrow_down</md-icon></th>
-        <th>Actions</th>
-      </tr>
-      </thead>
+      <table class="entity-index__table highlight">
+        <thead class="entity-index__table__header">
+        <tr>
+          <th data-field="Name">Product Name <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="Sku">SKU <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="Ship">Ship <md-icon>keyboard_arrow_down</md-icon></th>
+          <th data-field="Shipping Delay">Shipping Delay <md-icon>keyboard_arrow_down</md-icon></th>
+          <th>Actions</th>
+        </tr>
+        </thead>
 
-      <tbody>
-      <tr *ngFor="let entity of entities">
-        <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.sku}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.ship}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.shippingDelay}}</td>
-        <td>
-          <table-actions
-            [service]="service"
-            (viewClicked)="viewEntity(entity.id)"
-            (copyClicked)="copyEntity(entity.id)"
-            (exportClicked)="exportEntity(entity.id)">
-          </table-actions>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+        <tbody>
+        <tr *ngFor="let entity of entities">
+          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.sku}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.ship}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.shippingDelay}}</td>
+          <td>
+            <table-actions
+              [service]="service"
+              (viewClicked)="viewEntity(entity.id)"
+              (copyClicked)="copyEntity(entity.id)"
+              (exportClicked)="exportEntity(entity.id)">
+            </table-actions>
+          </td>
+        </tr>
+        </tbody>
+      </table>
 
-    <table-pagination
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)">
-    </table-pagination>
-  </md-card-content>
-</md-card>
+      <table-pagination
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </table-pagination>
+    </md-card-content>
+  </md-card>
+</div>
