--- a/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
+++ b/template/core-dist/src/app/pages/smtp-providers-page/smtp-providers.component.html
@@ -1,51 +1,53 @@
-<smtp-provider *ngIf="showEntityDetails" [entityId]="showEntityId" (close)="hideEntityDetails()"></smtp-provider>
+<div #indexR class="entity-index">
+  <smtp-provider *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></smtp-provider>
+  
+  <div class="entity-index__title">SMTP Providers</div>
 
-<div class="entity-index__title">SMTP Providers</div>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
 
-<button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
 
-<md-card class="entity-index__card">
-  <md-card-content class="entity-index__card__content">
+      <table class="entity-index__table highlight">
+        <thead class="entity-index__table__header">
+          <tr>
+            <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="hostname">Hostname <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="ip-address">IP Address <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="username">Username <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th data-field="port">Port <md-icon>keyboard_arrow_down</md-icon> </th>
+            <th>Actions</th>
+          </tr>
+        </thead>
 
-    <table class="entity-index__table highlight">
-      <thead class="entity-index__table__header">
-        <tr>
-          <th data-field="name">Name <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="hostname">Hostname <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="ip-address">IP Address <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="username">Username <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th data-field="port">Port <md-icon>keyboard_arrow_down</md-icon> </th>
-          <th>Actions</th>
+        <tbody>
+        <tr *ngFor="let entity of entities">
+          <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.ipAddress}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
+          <td (click)="viewEntity(entity.id)">{{entity.port}}</td>
+          <td>
+            <table-actions
+              [service]="service"
+              (viewClicked)="viewEntity(entity.id)"
+              (copyClicked)="copyEntity(entity.id)"
+              (exportClicked)="exportEntity(entity.id)">
+            </table-actions>
+          </td>
         </tr>
-      </thead>
+        </tbody>
+      </table>
 
-      <tbody>
-      <tr *ngFor="let entity of entities">
-        <td (click)="viewEntity(entity.id)">{{entity.name}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.ipAddress}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.hostname}}</td>
-        <td (click)="viewEntity(entity.id)">{{entity.port}}</td>
-        <td>
-          <table-actions
-            [service]="service"
-            (viewClicked)="viewEntity(entity.id)"
-            (copyClicked)="copyEntity(entity.id)"
-            (exportClicked)="exportEntity(entity.id)">
-          </table-actions>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-
-    <table-pagination
-      [limit]="limit"
-      [paginationValues]="paginationValues"
-      [previousDisabled]="page <= 0"
-      [nextDisabled]="!hasMorePages()"
-      (previous)="previous()"
-      (next)="next()"
-      (updateLimit)="updateLimit($event)">
-    </table-pagination>
-  </md-card-content>
-</md-card>
+      <table-pagination
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </table-pagination>
+    </md-card-content>
+  </md-card>
+</div>
